Bugzilla 112348 gmf_head anthonyh 051012 Sweep code for creation of Boolean objects